feat(challenges): add flag submission + minor tidy up

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DATABASE_URL=sqlite+aiosqlite:///challenges.db
 AUTHOR_ROLE_ID=
 ANNOUNCEMENT_WEBHOOK=
 SOLVE_WEBHOOK=
+CHALLENGE_CACHE=5
+WEBHOOK_TIMEOUT=10
