--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,14 @@ dependencies = [
     "pre-commit (>=4.5.1,<5.0.0)",
     "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
     "aiosqlite (>=0.22.1,<0.23.0)",
+    "aiohttp (>=3.13.3,<4.0.0)",
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.scripts]
+weekly_ctf_bot = "weekly_ctf_bot.__main__:main"
